# find admin_html -type f | sort | sed -e 's,^,\t,g'
nobase_dist_pkgdata_DATA =							     \
	admin_html/css/admin.css						     \
	admin_html/css/ui-lightness/images/ui-bg_diagonals-thick_18_b81900_40x40.png \
	admin_html/css/ui-lightness/images/ui-bg_diagonals-thick_20_666666_40x40.png \
	admin_html/css/ui-lightness/images/ui-bg_flat_10_000000_40x100.png	     \
	admin_html/css/ui-lightness/images/ui-bg_glass_100_f6f6f6_1x400.png	     \
	admin_html/css/ui-lightness/images/ui-bg_glass_100_fdf5ce_1x400.png	     \
	admin_html/css/ui-lightness/images/ui-bg_glass_65_ffffff_1x400.png	     \
	admin_html/css/ui-lightness/images/ui-bg_gloss-wave_35_f6a828_500x100.png    \
	admin_html/css/ui-lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png \
	admin_html/css/ui-lightness/images/ui-bg_highlight-soft_75_ffe45c_1x100.png  \
	admin_html/css/ui-lightness/images/ui-icons_222222_256x240.png		     \
	admin_html/css/ui-lightness/images/ui-icons_228ef1_256x240.png		     \
	admin_html/css/ui-lightness/images/ui-icons_ef8c08_256x240.png		     \
	admin_html/css/ui-lightness/images/ui-icons_ffd27a_256x240.png		     \
	admin_html/css/ui-lightness/images/ui-icons_ffffff_256x240.png		     \
	admin_html/css/ui-lightness/jquery-ui-1.8.1.custom.css			     \
	admin_html/images/groonga.png						     \
	admin_html/index.html							     \
	admin_html/js/jquery-1.4.2.min.js					     \
	admin_html/js/jquery-ui-1.8.1.custom.min.js
