noinstall_ruby_scripts =			\
	check-index-merge-source-dump.rb	\
	check-small-index-limit.rb		\
	extract-index-source-from-dump.rb	\
	generate-long-posting-list-data.rb	\
	generate-many-segment-data.rb		\
	groonga-benchmark-indexing.rb		\
	groonga-memory-leak-checker.rb		\
	groonga-memory-usage-analyzer.rb	\
	groonga-object-list-checker.rb		\
	prepare-sphinx-html.rb			\
	ucd-symbol-list.rb

noinstall_shell_scripts =			\
	index-column-diff-all.sh		\
	object-inspect-all.sh

EXTRA_DIST =					\
	$(noinstall_ruby_scripts)		\
	$(noinstall_shell_scripts)
