imagesdir = $(pkgdatadir)/images
images_DATA =							\
	groonga-icon-foreground-white.svg			\
	groonga-icon.svg					\
	groonga-logo-foreground-white.svg			\
	groonga-logo.svg					\
	groonga-powered-by-banner-bar-foreground-white.svg	\
	groonga-powered-by-banner-bar.svg			\
	groonga-powered-by-banner-foreground-white.svg		\
	groonga-powered-by-banner-large.svg			\
	groonga-powered-by-banner.svg				\
	mroonga-icon-foreground-white.svg			\
	mroonga-icon.svg					\
	mroonga-logo-foreground-white.svg			\
	mroonga-logo.svg					\
	nroonga-icon-foreground-white.svg			\
	nroonga-icon.svg					\
	nroonga-logo-foreground-white.svg			\
	nroonga-logo.svg					\
	rroonga-icon-foreground-white.svg			\
	rroonga-icon.svg					\
	rroonga-logo-foreground-white.svg			\
	rroonga-logo.svg

EXTRA_DIST =					\
	$(images_DATA)
