if INSTALL_MUNIN_PLUGINS
munin_pluginsdir = $(datarootdir)/$(PACKAGE)/munin/plugins
dist_munin_plugins_SCRIPTS =			\
	groonga_cpu_load			\
	groonga_cpu_time			\
	groonga_status				\
	groonga_memory				\
	groonga_n_records			\
	groonga_query_performance		\
	groonga_disk				\
	groonga_throughput
endif
