if INSTALL_MUNIN_PLUGINS
munin_pluginsdir = $(datarootdir)/$(PACKAGE)/munin/plugins
dist_munin_plugins_SCRIPTS =			\
	groonga_gqtp_cpu_load			\
	groonga_gqtp_cpu_time			\
	groonga_gqtp_status			\
	groonga_gqtp_memory			\
	groonga_gqtp_n_records			\
	groonga_gqtp_query_performance		\
	groonga_gqtp_disk			\
	groonga_gqtp_throughput			\
	groonga_http_cpu_load			\
	groonga_http_cpu_time			\
	groonga_http_status			\
	groonga_http_memory			\
	groonga_http_n_records			\
	groonga_http_query_performance		\
	groonga_http_disk			\
	groonga_http_throughput
endif
